# mwe-library-swig

./: .gitignore  README.md
.github/workflows/: cmake_for_macos.yml  compile_cpp_macos.yml
mwe/: CMakeLists.txt  ints.cpp  mwe.hpp  strings.cpp
python-interface/: .gitignore  Makefile.debug  Makefile.macos  Makefile.windows  mwe.i  mwedebug.i  test_mewdebug.py  test_mwe.py  test_tfmdebug.py  tfmdebug.i
tfm/: CMakeLists.txt  ints.cpp  strings.cpp  test_for_mac.hpp
